unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/ETT_Quotation_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Quotation Line Item</label>
    <nameField>
        <displayFormat>QTLI-{0000}</displayFormat>
        <label>Quotation Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>