unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotation Line Items</relationshipLabel>
    <relationshipName>Quotation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>