unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Quotation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Quotation__c</fullName>
    <label>Quotation</label>
    <referenceTo>ETT_Quotation__c</referenceTo>
    <relationshipLabel>Quotation Line Items</relationshipLabel>
    <relationshipName>Quotation_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>