unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Total__c.field-meta.xml
<CustomField>
    <fullName>ETT_Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>