unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Total_Price__c</fullName>
    <formula>ETT_Quantity__c  *  ETT_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>