unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Tyre_Size_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size Master</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Quotation Line Items</relationshipLabel>
    <relationshipName>Quotation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>