unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Tyre_Size_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size_Name__c</fullName>
    <formula>ETT_Tyre_Size_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Size Name</label>
    <type>Text</type>
</CustomField>