unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>