unpackaged/main/default/objects/ETT_Quotation_Line_Item__c/fields/ETT_Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ETT_Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Quotation Line Items</relationshipLabel>
    <relationshipName>Quotation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>